z-index fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,7 +80,7 @@ body {
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   width: 1400px;
-  z-index: 10;
+  z-index: 1001;
   pointer-events: none;
 }
 
